overflow: hidden fixed

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h6,
 }
 
 .container {
-  overflow: hidden;
+  overflow-x: hidden;
   width: 100vw;
   height: 100vh;
   display: flex;
